--- a/assets/pages/complete.html
+++ b/assets/pages/complete.html
@@ -26,7 +26,7 @@
                 max-width: auto;
                 flex-direction: column;
                 align-items: center;
-                background-color: rgb(245, 164, 164);
+                background-color: white;
             }
 
             .container {
@@ -50,19 +50,19 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                background-color: rgb(245, 164, 164);
+                background-color:white;
             }
 
             header .navbar a {
                 padding: 10px;
                 margin-right: 10px;
-                color: #FFFF;
+                color: black;
                 font-size: 20px;
             }
 
             header .logo {
                 font-size: 25pt;
-                color: #FFFF;
+                color: black;
                 margin-left: 20px;
             }
 
